Fixed file name overflow and promise check on flout.

--- a/octoprint_lui/static/scss/lui.scss
+++ b/octoprint_lui/static/scss/lui.scss
@@ -94,9 +94,10 @@ a {
   line-height: 1.6;
 }
 
-.circle span {
-    color: #aaa;
-    text-align: center;
+.text_wrap {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .icon-bar a {
